src/main/metadata-au/objects/Dealer_System__c.object
<CustomObject>
    <fields>
        <fullName>Customer_No__c</fullName>
        <description>Dealer Customer number</description>
        <label>Customer No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the dealer that has created the new entry – not visible in Retail</description>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Systems</relationshipLabel>
        <relationshipName>Dealer_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <description>The name of the DMS system in used at the Dealership e.g. Autoline</description>
        <label>System Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Dealer System</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DS-{0000000}</displayFormat>
        <label>Dealer System Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Systems</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>  